Add benchmark copied from panama jdk
because it is easier to develop in IDE this way